# stingray

./: .gitmodules  CMakeLists.txt  compile_commands.json  imgui.ini
.cache/clangd/index/: _OSByteOrder.h.4A2BEF4AE44B1BD2.idx  ___wctype.h.28E0346E5D383E96.idx  ___wctype.h.DE0580324DE1DDC0.idx  __assert.3A1E087DC34AEC5C.idx  __assertion_handler.C55753678730CA20.idx  __bit_reference.2577FC2FC5D06119.idx  __config.43E8DEA5475F41B4.idx  __config_site.E537400F0B03C85E.idx  __hash_table.55F9ED4076E2691A.idx  __locale.69408431E4A6F319.idx  __mbstate_t.h.97C124ED5EEE466D.idx  __node_handle.2255456AC41B0C70.idx  __split_buffer.4B2A2162FAEE2538.idx  __std_mbstate_t.h.42D3B242F03823BA.idx  __stddef_rsize_t.h.FE56E6466053BEDB.idx  __undef_macros.7432882B9291E889.idx  __verbose_abort.EB9DEBBDAAAE871A.idx  __wctype.h.52B94ABAFCD2DF95.idx  __xlocale.h.2E9199A7D6E55B22.idx  _clock_t.h.8126E6BB4E6ADD12.idx  _ctype.h.524949E507DB06FA.idx  _ctype.h.99CB3404D377A90B.idx  _fixes.hpp.183CF5A5AD8C1DB7.idx  _int16_t.h.843CB4EBD318A8B1.idx  _int32_t.h.1E08107611938016.idx  _int64_t.h.259A586C0307F371.idx  _int8_t.h.D6D13FE787FAD6FF.idx  _intmax_t.h.A3471E2D65C56ED5.idx  _intptr_t.h.6E02ECFF8A52307C.idx  _locale.h.73B66B1D6BC1B318.idx  _locale_posix2008.h.DB3F6187131256C7.idx  _locale_t.h.640217CB6DDEE918.idx  _malloc.h.9D97A9BD2FA19D68.idx  _mb_cur_max.h.6BDC8FB49E7FCAAE.idx  _mbstate_t.h.8996B1081D1BC3DE.idx  _nl_item.h.7246765EA3D94B48.idx  _null.h.E480DE1D004F6F88.idx  _printf.h.1335F2FFB9CB07C8.idx  _rsize_t.h.304A09B4EE2618B8.idx  _size_t.h.031EC5CC0CB54B8E.idx  (+846 more)
include/glad/: glad.h
include/stingray/: core.h  particle.cpp  particle.h  pcontacts.h  pfgen.h  plinks.h  precision.h  pworld.h
include/utils/: cylinder.h  mesh.h  shader.h  shader.vs  sphere.h
shaders/: lightShader.frag  lightShader.vert  shader.frag  shader.fs  shader.vert
src/: main.cpp  particle.cpp  pcontacts.cpp  pfgen.cpp  plinks.cpp  pworld.cpp
src/pendulum/: Makefile  main  main.cpp
utils/: cylinder.cpp  glad.c  mesh.cpp  sphere.cpp
